Pushing 1 change to primer-avatars since a11e8b7
* Separating out modules into primer-core and primer-product - Jon Rohan github/github@ddf698c

--- a/lib/avatar-stack.scss
+++ b/lib/avatar-stack.scss
@@ -12,6 +12,7 @@
     display: inline-block;
     width: 20px;
     height: 20px;
+    box-sizing: content-box;
     margin-right: -15px;
     background-color: #fff;
     border-right: 1px solid #fff;
@@ -25,6 +26,7 @@
     &:last-child {
       z-index: 1;
       margin-right: 0;
+      border-right: 0;
     }
   }
 
