Pushing 6 changes to primer-avatars since dee4930
* Make it a new release - Patrick Marsceill github/github@24c4c50
* Docs tweak - Patrick Marsceill github/github@ae4f341
* Bump package number - Patrick Marsceill github/github@070fca8
* Add partial import to avatars index - Patrick Marsceill github/github@210ba08
* Move docs to avatars - Patrick Marsceill github/github@2045ba4
* Move and rename - Patrick Marsceill github/github@6bb6ab2

--- a/index.scss
+++ b/index.scss
@@ -4,3 +4,4 @@
 @import "./lib/avatar.scss";
 @import "./lib/avatar-parent-child.scss";
 @import "./lib/avatar-stack.scss";
+@import "./lib/circle-badge.scss";
