Pushing 1 change to primer-avatars since 62a77ca
* Bump version number for circle badge spacing tweak - Patrick Marsceill github/github@7aac713

--- a/lib/circle-badge.scss
+++ b/lib/circle-badge.scss
@@ -10,8 +10,9 @@
 }
 
 .CircleBadge-icon {
-  width: 60% !important;
+  max-width: 60% !important;
   height: auto !important;
+  max-height: 55% !important;
 }
 
 // Small badge
