--- a/lib/avatar-stack.scss
+++ b/lib/avatar-stack.scss
@@ -19,6 +19,10 @@
     border-radius: 2px;
     transition: margin 0.1s ease-in-out;
 
+    &:only-child {
+      background-color: transparent;
+    }
+
     &:first-child {
       z-index: 3;
     }
