Pushing 3 changes to primer-avatars since 1c22365
* update version numbers in primer-product - broccolini github/github@5301936
* update to rgb to white variable - broccolini github/github@96d2590
* update whites in avatar stack - broccolini github/github@dc3be2f

--- a/lib/avatar-stack.scss
+++ b/lib/avatar-stack.scss
@@ -14,8 +14,8 @@
     height: 20px;
     box-sizing: content-box;
     margin-right: -15px;
-    background-color: #fff;
-    border-right: 1px solid #fff;
+    background-color: $bg-white;
+    border-right: 1px solid $white;
     border-radius: 2px;
     transition: margin 0.1s ease-in-out;
 
